🤡 chore: named export를 위한 eslint 옵션 수정

--- a/mvc-pagination/.eslintrc
+++ b/mvc-pagination/.eslintrc
@@ -17,6 +17,7 @@
     "class-methods-use-this": "off",
     "consistent-return": "off",
     "no-undef": "off",
+    "import/prefer-default-export": "off",
     "import/extensions": "off",
     "no-restricted-syntax": "off"
   },
